<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
            android:title="@string/SETTINGS_CATEGORY_SYNC">

        <SwitchPreference
                android:key="@string/SETTINGS_SYNC_SWITCH_KEY"
                android:title="@string/SETTINGS_SYNC_SWITCH_TITLE"
                android:summary="@string/SETTINGS_SYNC_SWITCH_SUMMARY"
                android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/SETTINGS_CATEGORY_CONTACT">
        <Preference
                android:title="@string/SETTINGS_CONTACT_PREFERENCE_TITLE"
                android:summary="@string/SETTINGS_CONTACT_PREFERENCE_SUMMARY">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/EMAIL_TO_DEVELOPER"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
